--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1"
   },
+  "homepage": "https://pavan-sagar.github.io/random-quote-generator/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
